<resources>
    <string name="app_name">Patineando</string>
    <string name="lblAccede">Accede para continuar</string>
    <string name="txtCorreoAcceso">Correo electrónico</string>
    <string name="txtContrasenaAcceso">Contraseña</string>
    <string name="btnAccederAcceso">Acceder</string>
    <string name="btnOlvidoAceso">¿Has olvidado la contraseña?</string>
    <string name="btnRegistroAcceso">¡Registrate!</string>
    <string name="logErrorAccesoGoogle">Resultado del acceso: Fallido, código: </string>
    <string name="logExitoAccesoGoogle">Acceso con credenciales exitóso</string>
    <string name="autenticacionFallidaAcceso">Autenticación fallida.</string>
    <string name="AutenticacionFirebaseConGoogle">Autenticacion en Firebase con Google</string>
    <string name="AccesoConGoogleFallido">Acceso con Google fallido</string>
    <string name="AccesoConCorreoExitoso">Has accedido con tu correo</string>
    <string name="AccesoConCorreoFallido">Acceso con correo fallido</string>
    <string name="AccesoFaltaCorreo">Error:El campo correo no puede estar vacío</string>
    <string name="AccesoFaltaContrasena">Error: Debes introducir una contraseña</string>
    <string name="lblCorreoRegistro">Correo: </string>
    <string name="lblConfirmarCorreoRegistro">Confirmar Correo: </string>
    <string name="lblContrasenaRegistro">Contraseña: </string>
    <string name="lblContrasenaConfirmarRegistro">Confirmar Contraseña: </string>
    <string name="btnRegistrarRegistro">Registrar </string>
    <string name="toastCorreosNoCoinciden">Los correos no coinciden</string>
    <string name="toastContrasenasNoCoinciden">Las contraseñas no coinciden</string>
    <string name="toastFaltaCorreo">Debes introducir y confirmar un correo</string>
    <string name="toastFaltaContra">Debes introducir y validar una contraseña</string>
    <string name="toastRegistrandoUsuario">Registrando, este proceso puede tardar unos minutos.</string>
    <string name="toastRegistroExitoso">Te has registrado satisfactoriamente.</string>
    <string name="toastRegistroFallido">El registro ha fallado, por favor, inténtelo de nuevo</string>
    <string name="btnMisCursos">Mis Cursos</string>
    <string name="btnMiPerfil">Mi Perfil</string>
    <string name="lblClimaMadrid">Pronóstico Madrid</string>
    <string name="lblNombreUsuario">Nombre: </string>
    <string name="lblApodoUsuario">Apodo: </string>
    <string name="lblPatinesUsuario">Patines</string>
    <string name="lblDescripcionUsuario">Descripción</string>
    <string name="btnVolverMiPerfil">Volver</string>
    <string name="btnModificarMiPerfil">Modificar mi perfil</string>
    <string name="btnCerrarSesionMiPerfil">Cerrar Sesión</string>
    <string name="sesionCerradaMiPerfil">Ha cerrado sesión.</string>
    <string name="lblNombreModificarMiPerfil">Nombre: </string>
    <string name="lblApellidosModificarMiPerfil">Apellidos: </string>
    <string name="lblApodoModificarMiPerfil">Apodo: </string>
    <string name="lblPatinesModificarMiPerfil">Patines: </string>
    <string name="lblDescripcionModificarMiPerfil">Descripción: </string>
    <string name="btnGuardarCambiosModificarMiPerfil">Guardar cambios</string>
    <string name="logFirebase">Firebase</string>
    <string name="logErrorObtencionDatos">Error al obtener la información</string>
    <string name="toast_no_has_seleccionado_imagen">No has seleccionado ninguna imagen</string>
    <string name="toast_fallo_al_subir_imagen">La subida de la imagen ha fallado</string>
    <string name="lblNivelCardMisCursos">Nivel: </string>
    <string name="lblCursosAlumnoMisCursos">Mis cursos: </string>
    <string name="title_activity_menu_navigator_drawer">MenuNavigatorDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usuarioAlumno">Alumnado</string>
    <string name="usuarioProfesor">Profesorado</string>
    <string name="usuarioAdministrador">Administración</string>
    <string name="menuNavigatorDrawer">Menú principal</string>
    <string name="opcionesNavigatorDrawer">Opciones</string>
    <string name="MisAlumnosNavigatorDrawer">Mis grupos</string>
    <string name="gestionarCursosNavigatorDrawer">Gestionar Cursos</string>
    <string name="gestionarNoticiasNavigatorDrawer">Gestionar Noticias</string>
    <string name="gestionarPermisosNavigatorDrawer">Gestionar Permisos</string>
    <string name="gestionarEscuelaNavigatorDrawer">Gestionar Escuela</string>
    <string name="gestionarRutasNavigatorDrawer">Gestionar Rutas</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="fragmento_gestionar_permisos">Gestión de permisos de usuario</string>
    <string name="fragmento_gestionar_permisos_buscar">Busqueda por apellidos del usuario al que le quiere cambiar los permisos:</string>
    <string name="boton_fragmento_permisos_buscar">Buscar</string>
    <string name="etiqueta_nombre_fragmento_usuario_permisos">Nombre:</string>
    <string name="etiqueta_correo_fragmento_usuario_permisos">Correo:</string>
    <string name="etiqueta_tipo_usuario_fragmento_usuario_permisos">Tipo de Usuario:</string>
    <string name="etiqueta_cambiar_fragmento_usuario_permisos">Seleccione el permiso que debería tener este usuario.</string>
    <string name="btn_guardar_cambios_usuario_permisos">Actualizar permisos</string>
    <string name="btn_modificar_info_escuela_usuario_permisos">Gestionar cuenta y matrícula</string>
    <string name="btn_modificar_perfil_usuario_usuario_permisos">Gestionar perfil del usuario</string>
    <string name="lbl_gestion_correo_modificar_cuenta_matricula">Gestionar Correo</string>
    <string name="lbl_correo_antiguo_modificar_cuenta_matricula">Correo actual:</string>
    <string name="lbl_correo_modificar_cuenta_matricula">Nuevo Correo:</string>
    <string name="lbl_confirmar_correo_modificar_cuenta_matricula">Confirmar Nuevo Correo:</string>
    <string name="btn_correo_modificar_correo_matricula">Actualizar correo</string>
    <string name="lbl_gestion_matricula_modificar_cuenta_matricula">Gestionar Estado de la Matrícula</string>
    <string name="rdb_activa_modificar_cuenta_matricula">Activar</string>
    <string name="rdb_inactiva_modificar_cuenta_matricula">Desactivar</string>
    <string name="btn_matricula_modificar_cuenta_matricula">Modificar Estado de la Matricula</string>
    <string name="lbl_eliminar_usuario_modificar_cuenta_matricula">Eliminar Usuario</string>
    <string name="btn_eliminar_usuario_modificar_cuenta_matricula">Eliminar Usuario</string>
    <string name="lbl_gestionar_cursos_GE">GESTIONAR CURSOS</string>
    <string name="lbl_anadir_curso_GE">Crear un nuevo curso</string>
    <string name="btn_añadir_curso_GE">Añadir </string>
    <string name="lbl_editar_curso_GE">Modificar curso existente</string>
    <string name="btn_editar_curso_GE">Editar </string>
    <string name="lbl_eliminar_curso_GE">Eliminar un curso publicado</string>
    <string name="btn_eliminar_curso_GE">Eliminar</string>
    <string name="lbl_gestionar_recursos_GE">GESTIONAR RECURSOS ESCUELAS</string>
    <string name="lbl_asignar_recurso_GE">Asignar recursos a un curso</string>
    <string name="btn_asignar_recursoGE">Asignar Recursos</string>
    <string name="lbl_subir_recurso_GE">Subir recursos</string>
    <string name="btn_subir_recursoGE">Subir Recursos </string>
    <string name="lbl_eliminar_recurso_GE">Eliminar recursos</string>
    <string name="btn_eliminar_recursoGE">Eliminar Recursos </string>
    <string name="lbl_gestionar_grupos_GE">GESTIONAR GRUPOS</string>
    <string name="lbl_seleccionar_curso"> Selecciona la disciplina:</string>
    <string name="lbl_seleccionar_dificultad"> Selecciona dificultad: </string>
    <string name="rdb_basico">Basico</string>
    <string name="rdb_medio">Medio</string>
    <string name="rdb_avanzado">Avanzado</string>
    <string name="rdb_experto">Experto</string>
    <string name="lbl_dias_semana">Seleccione los dias de la semana en los que habrá clase.</string>
    <string name="chp_lunes">Lunes</string>
    <string name="chp_martes">Martes</string>
    <string name="chp_miercoles">Miercoles</string>
    <string name="chp_jueves">Jueves</string>
    <string name="chp_viernes">Viernes</string>
    <string name="chp_sabado">Sabado</string>
    <string name="chp_domingo">Domingo</string>
    <string name="lbl_seleccionar_hora_clase">Seleccione la hora a la que se imparten las clases:</string>
    <string name="btn_seleccionar_hora">Seleccionar Hora</string>
    <string name="lbl_seleccionar_localizacion">Seleccione la ubicación de las clases</string>
    <string name="lbl_seleccionar_profesor">Seleccionar profesor</string>
    <string name="btn_confirmar">Confirmar</string>
    <string name="lbl_hora">Hora</string>
    <string name="rdb_cero">0</string>
    <string name="rdb_uno">1</string>
    <string name="rdb_dos">2</string>
    <string name="rdb_tres">3</string>
    <string name="rdb_cuatro">4</string>
    <string name="rdb_cinco">5</string>
    <string name="rdb_seis">6</string>
    <string name="rdb_siete">7</string>
    <string name="rdb_ocho">8</string>
    <string name="rdb_nueve">9</string>
    <string name="rdb_diez">10</string>
    <string name="rdb_once">11</string>
    <string name="lbl_minuto">Minuto</string>
    <string name="rdb_punto">XX:00</string>
    <string name="rdb_cuarto">XX:15</string>
    <string name="rdb_media">XX:30</string>
    <string name="rdb_menoscuarto">XX:45</string>
    <string name="lbl_ampm">AM / PM</string>
    <string name="lbl_am">AM</string>
    <string name="lbl_pm">PM</string>
    <string name="lbl_seleccionar_criterio_busqueda">Seleccione un criterio de búsqueda</string>
    <string name="rdb_dia">Dia</string>
    <string name="rdb_lugar">Lugar</string>
    <string name="rdb_dificultad">Nivel</string>
    <string name="rdb_curso">Curso</string>
    <string name="rdb_profesor">Docente</string>
    <string name="alert_eliminar_titulo">¿Seguro que quieres eliminar el curso?</string>
    <string name="alert_cuerpo_titulo">Si continúa, el curso se eliminará de la base de datos.</string>
    <string name="toast_exito_borrado">El curso se ha eliminado.</string>
    <string name="lbl_mostrar_cursos_disciplina">Listado de cursos : </string>
    <string name="alertdialog_titulo_matricularse">Cuadro de matriculación</string>
    <string name="alertdialog_cuerpo_matricularse">Seleccione aceptar para matricularse en el curso.</string>
    <string name="alertdialog_boton_aceptar_matricularse">Confirmar</string>
    <string name="alertdialog_boton_cancelar_matricularse">Cancelar</string>
    <string name="toast_matricula_realizada_con_exito">Matricula realizada con éxito.</string>
    <string name="lbl_disciplina_subir_recursos">Selecciona la disciplina:</string>
    <string name="lbl_tipo_doc_subir">Seleccione el tipo de documento:</string>
</resources>